2007-08-01 sstein <sstein@geo.unizh.ch>
		* resolved LoadDatasetPlugIn "ok" button problem on MacOSX. The problem was caused by the validation method that always returned false. The workaround does not use validation, but only for MacOSX computers. To the OS a new class was added. 

2007-08-01 Andreas Schmitz <schmitz@lat-lon.de>
		* src/com/vividsolutions/jump/workbench/model/WMSLayer.java,
			src/com/vividsolutions/jump/workbench/ui/plugin/wms/EditWMSQueryPanel.java,
			src/com/vividsolutions/jump/workbench/ui/plugin/wms/AddWMSQueryPlugIn.java:
			WMS layers use the title now instead of the WMS layer name.
			While editing WMS requests, moving layers up/down caused the SRS
			box to switch back to the first available SRS, this was fixed.

2007-07-31 sstein <sstein@geo.unizh.ch>

	* updated from OpenJUMP 1.2 B to 1.2 C (in language files)

2007-07-31 Andreas Schmitz <schmitz@lat-lon.de>
		* src/com/vividsolutions/jump/workbench/ui/plugin/wms/AddWMSQueryPlugIn.java:
		  Took the liberty and updated the demo.deegree.org URL to a working
			value.

2007-07-31 Andreas Schmitz <schmitz@lat-lon.de>
    * src/de/latlon/deejump/plugin/style/LayerStyle2SLDPlugIn.java,
			src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
			Default output is UTF-8 now instead of ISO-8859-1, fixing encoding problems in
			resulting XML files.

2007-07-30 sstein <sstein@geo.unizh.ch>

	* added fix by Malte to avoid null-pointer excpetion when making a copy of a 
	  FeatureCollection containing Features with null values for attributes. 
	  (see jpp-devel email send by sstein on 24.July.2007) 
	
	* replaced jmat_5.0.jar by the cleaned up version jmat_5.0m.jar wich does only
	  contain the org.jmat packages. Additionally the start-up scripts (.sh, .bat) have 
	  been updated 

2007-07-13 mmichaud <michael.michaud@free.fr>

    * Bug fix in LabelStyle : added trim() to avoid labels to be ex-centered
    
    * Bug fix : thick closed lines (and polygons) did not have a nice